--- a/index.html
+++ b/index.html
@@ -3,30 +3,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riddle Challenge</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        #riddleContainer {
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #riddle {
+            font-size: 18px;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        #riddleForm {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        label {
+            margin-bottom: 10px;
+        }
+
+        input {
+            padding: 8px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        #result {
+            margin-top: 20px;
+            display: none;
+        }
+
+        #success, #failure {
+            font-size: 16px;
+        }
+
+        #failure {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Welcome to the Riddle Challenge</h1>
+    <h1>Riddle Challenge</h1>
 
     <div id="riddleContainer">
         <p id="riddle"></p>
-        <form id="riddleForm">
+        <form id="riddleForm" data-answer="">
             <label for="answer">Your Answer:</label>
             <input type="text" id="answer" required>
             <button type="button" onclick="checkAnswer()">Submit</button>
         </form>
     </div>
 
-    <div id="result" style="display: none;">
+    <div id="result">
         <p id="success">Congratulations! Here is your Mega file decryption key: <strong>BY8p1uXx-Xt02KNnDCmojgqE6hRCjlFVPie2Zvi0_2c</strong></p>
-        <p id="failure" style="color: red;">Sorry, the answer is incorrect. Please try again.</p>
+        <p id="failure">Sorry, the answer is incorrect. Please try again.</p>
     </div>
 
     <script>
         var riddles = [
-            "I speak without a mouth and hear without ears. I have no body, but I come alive with the wind. What am I?",
-            "The more you take, the more you leave behind. What am I?",
-            "I am taken from a mine, and shut up in a wooden case, from which I am never released, and yet I am used by almost every person. What am I?"
+            { question: "I speak without a mouth and hear without ears. I have no body, but I come alive with the wind. What am I?", answer: "echo" },
+            { question: "The more you take, the more you leave behind. What am I?", answer: "footsteps" },
+            { question: "I am taken from a mine, and shut up in a wooden case, from which I am never released, and yet I am used by almost every person. What am I?", answer: "pencil" },
+            { question: "The person who makes it, sells it. The person who buys it never uses it. What is it?", answer: "coffin" },
+            { question: "What has keys but can't open locks?", answer: "piano" },
+            { question: "What comes once in a minute, twice in a moment, but never in a thousand years?", answer: "letter 'M'" },
+            { question: "I'm tall when I'm young, and I'm short when I'm old. What am I?", answer: "candle" },
+            { question: "What has a heart that doesn't beat?", answer: "artichoke" },
+            { question: "The more you take, the more you leave behind. What am I?", answer: "footsteps" },
+            { question: "What has a head, a tail, is brown, and has no legs?", answer: "penny" }
+            // Add more riddles and answers here
         ];
 
         function getRandomRiddle() {
@@ -35,12 +114,14 @@
         }
 
         function initialize() {
-            document.getElementById('riddle').innerText = getRandomRiddle();
+            var currentRiddle = getRandomRiddle();
+            document.getElementById('riddle').innerText = currentRiddle.question;
+            document.getElementById('riddleForm').dataset.answer = currentRiddle.answer;
         }
 
         function checkAnswer() {
             var userAnswer = document.getElementById('answer').value.toLowerCase();
-            var correctAnswer = "key"; // Adjust this to the actual correct answer for the riddle
+            var correctAnswer = document.getElementById('riddleForm').dataset.answer;
 
             if (userAnswer === correctAnswer) {
                 document.getElementById('result').style.display = 'block';
@@ -53,7 +134,7 @@
             }
 
             // Get a new riddle for the next attempt
-            document.getElementById('riddle').innerText = getRandomRiddle();
+            initialize();
             document.getElementById('answer').value = '';
         }
 
