--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
 
     <script>
         var riddles = [
-            { question: "I speak without a mouth and hear without ears. I have no body, but I come alive with the wind. What am I?", answer: "echo" },
-            { question: "The more you take, the more you leave behind. What am I?", answer: "footsteps" },
-            { question: "I am taken from a mine, and shut up in a wooden case, from which I am never released, and yet I am used by almost every person. What am I?", answer: "pencil" },
-            { question: "The person who makes it, sells it. The person who buys it never uses it. What is it?", answer: "coffin" },
+            { question: "I speak without a mouth and hear without ears. I have no body, but I come alive with the wind. What am I?", answer: "echoo" },
+            { question: "The more you take, the more you leave behind. What am I?", answer: "footstepss" },
+            { question: "I am taken from a mine, and shut up in a wooden case, from which I am never released, and yet I am used by almost every person. What am I?", answer: "pencill" },
+            { question: "The person who makes it, sells it. The person who buys it never uses it. What is it?", answer: "coffinn" },
             { question: "What has keys but can't open locks?", answer: "piano" },
-            { question: "What comes once in a minute, twice in a moment, but never in a thousand years?", answer: "letter 'M'" },
-            { question: "I'm tall when I'm young, and I'm short when I'm old. What am I?", answer: "candle" },
-            { question: "What has a heart that doesn't beat?", answer: "artichoke" },
-            { question: "The more you take, the more you leave behind. What am I?", answer: "footsteps" },
-            { question: "What has a head, a tail, is brown, and has no legs?", answer: "penny" }
+            { question: "What comes once in a minute, twice in a moment, but never in a thousand years?", answer: "letter 'Mm'" },
+            { question: "I'm tall when I'm young, and I'm short when I'm old. What am I?", answer: "candlee" },
+            { question: "What has a heart that doesn't beat?", answer: "artichokee" },
+            { question: "The more you take, the more you leave behind. What am I?", answer: "footstepss" },
+            { question: "What has a head, a tail, is brown, and has no legs?", answer: "pennyy" }
             // Add more riddles and answers here
         ];
 
