--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riddle Challenge</title>
+    <title>Solve riddle to get key</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
