--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
 
-    <h1>Riddle Challenge</h1>
+    <h1>Solve riddle to get key</h1>
 
     <div id="riddleContainer">
         <p id="riddle"></p>
